--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 :root{
     --colors: #613a4291;
     --color: #DBAFB8;
-    --colort:#3c2f32;
+    --colort:#221a1c;
     --titulo:'co1',Courier,sans-serif;
     --texto:'co2',Courier,sans-serif;
 }
