--- a/style.css
+++ b/style.css
@@ -9,19 +9,21 @@
 }
 
 :root{
-    --colors: #613a4291;
-    --color: #DBAFB8;
-    --colort:#221a1c;
+    --trans:#2a2014d3;
+    --cor0:#2a2014;
+    --cor1:#59442A;
+    --cor2:#8C7E6D;
+    --cor3:#e4ded8;
     --titulo:'co1',Courier,sans-serif;
     --texto:'co2',Courier,sans-serif;
 }
 
 body{
     margin: 0px;
-    background-color: var(--color);
+    background-color: var(--cor3);
 }
 header{
-    background:black left top no-repeat fixed;
+    background:var(--cor0) left top no-repeat fixed;
 }
 header > h1{
     margin: 0px;
@@ -29,45 +31,74 @@ header > h1{
     font-size: max(38px,6vw);
     text-align: center;
     font-weight: normal;
-    color: white;
+    color: var(--cor3);
     padding: 28px 0px 0px 0px;
 }
 header > h2{
     margin: 0px;
     font:normal normal 1em Arial;
     text-align: center;
-    color: white;
+    color: var(--cor3);
     padding: 18px 0px 23px 0px;
     font-size:max(15px, 1.4vw);
 }
 header a{
  
  text-decoration: none;
- color:white;
+ color: var(--cor3);
 }
 header a:hover{ 
   text-decoration: underline;
   font-weight: bolder;
+  color: white;
 }
 section p{
     font-size:max(1.3em , 2vw);
     font-family: var(--texto);
-    color:var(--colort);
+    color:var(--cor1);
     
 }
-section.i{
-    background: gray url(imagens/tema.jpg) left top no-repeat fixed;
+section.cordel{
+    background: rgba(128, 128, 128, 0) url(imagens/tema.jpg) center right  no-repeat fixed;
     background-size:cover;
     padding: 15px 0px 20px 0px;
+    box-shadow: inset 0px 2px 5px 0px var(--trans);
+}
+section.livro{
+    background: rgba(128, 128, 128, 0) url(imagens/cordel.jpg) center right  no-repeat fixed;
+    background-size:cover;
+    padding: 15px 0px 20px 0px;
+    box-shadow: inset 0px 3px 5px 0px var(--trans);
 }
 section p{
     margin-left: 12px;
-    margin-bottom: 5px;
+    margin-bottom: 35px;
+    margin-top: 35px;
     width:max(230px,25%);
-    padding: 0px 10px 35px 5px ; 
+    padding: 0px 10px 5px 5px ; 
 }
 section p.opaco{
-    background-color: var(--colors);
-    color:rgb(255, 255, 255);
+    background-color: var(--trans);
+    color: var(--cor3);
+    border-radius: 10px;
     
+}
+footer{
+    text-align: center;
+    color: var(--cor3);
+    font-family: var(--texto);
+    background-color: var(--cor0);
+}
+footer p{
+    margin: 0px;
+    padding: 0px;   
+}
+footer a{
+    text-decoration: none;
+    color: var(--cor3);
+}
+footer a:hover{ 
+ text-decoration: underline;
+ color: white;
+
 }
