--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body{
 }
 header{
     background:var(--cor0) left top no-repeat fixed;
+    border-radius: 0px 0px 10px 10px;
 }
 header > h1{
     margin: 0px;
@@ -53,34 +54,37 @@ header a:hover{
   color: white;
 }
 section p{
-    font-size:max(1.3em , 2vw);
+    font-size:max(1.3em , 2.5vw);
     font-family: var(--texto);
     color:var(--cor1);
-    
+    padding: 25px 25px 25px 25px;
 }
 section.cordel{
     background: rgba(128, 128, 128, 0) url(imagens/tema.jpg) center right  no-repeat fixed;
     background-size:cover;
-    padding: 15px 0px 20px 0px;
+    padding: 30px 0px 30px 0px;
     box-shadow: inset 0px 2px 5px 0px var(--trans);
 }
 section.livro{
     background: url(imagens/cordel.jpg) center right no-repeat fixed;
-    background-size:cover;
-    padding: 15px 0px 20px 0px;
+    background-size: cover ;
     box-shadow: inset 0px 3px 5px 0px var(--trans);
+    padding: 25px 5px 25px 2px;
 }
 section p{
     margin-left: 12px;
     margin-bottom: 35px;
     margin-top: 35px;
     width:max(230px,25%);
-    padding: 0px 10px 5px 5px ; 
+    padding: 0px 10px 5px 5px; 
 }
 section p.opaco{
     background-color: var(--trans);
     color: var(--cor3);
     border-radius: 10px;
+    padding: 25px 10px 25px 10px ;
+    margin: 2px;
+    box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.475);
     
 }
 footer{
